# airbrowse

./: Cargo.toml  LICENSE.md  README.md
airBrowse/airBrowse.app/Contents/: Info.plist
airBrowse/airBrowse.app/Contents/Resources/: airBrowse.icns
src/: main.rs
ui/: main.slint
