[package]
name = "test-brow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
url = "2.5.7"
urlencoding = "2.1.3"

slint = { version = "1.13", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-winit-femtovg", "raw-window-handle-06"] }

wry = { version = "0.53.3" }

[build-dependencies]
slint-build = "1.13"


[package.metadata.bundle]
name        = "airBrowseX"
identifier  = "com.airbrowse.app"
icon        = ["icon.png"]
category    = "public.app-category.developer-tools"
